--- a/练习/第一周/day12.25/form/email.html
+++ b/练习/第一周/day12.25/form/email.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-		<form action="" method="post">
-			<table border="5" cellpadding="0" cellspacing="0">
-				<tr>
-					<th>邮箱</th>
-					<td><input type="email" name="email"  value="" placeholder="请输入工作邮箱"/></td>
-				</tr>
-				<tr>
-					<th>验证码</th>
-					<td>
-						<table >
-							<tr>
-								<td><input type="text" name="text" value="" /></td>
-								<td><img src="https://gitee.com/rucaptcha/" width="140" heigth alt=""></td>	
-								
-							</tr>
-						</table>
-					</td>	
-				</tr>
-				<tr>
-					<th>邮箱验证</th>
-					<td>
-						<table>
-							<tr>
-								<td><input type="text" name="yanzhengma" value="" placeholder="请输入邮箱验证码"/></td>
-								<td><button type="button">获取验证码</button></td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-				<tr>
-					<th>姓名</th>
-					<td><input type="text" name="username" value="" /></td>
-				</tr>
-				<tr>
-					<th>个性域名</th>
-					<td>
-						<table>
-							<tr>
-								<td><input type="text" name="" value="http://gitee.com/" /></td>
-								<td></td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-				<tr>
-					<th>密码</th>
-					<td><input type="password" name="password" placeholder="密码不小于6位" id="" value="" /></td>
-				</tr>
-				<tr></tr>
-			</table>
-			<input type=""checkbox name="" value="" /><br>
-			<input type="submit" value="注册"/>
-		</form>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <title></title>
+</head>
+<body>
+<form action="" method="post">
+    <table border="5" cellpadding="0" cellspacing="0">
+        <tr>
+            <th>邮箱</th>
+            <td><input type="email" name="email" value="" placeholder="请输入工作邮箱"/></td>
+        </tr>
+        <tr>
+            <th>验证码</th>
+            <td>
+                <table>
+                    <tr>
+                        <td><input type="text" name="text" value=""/></td>
+                        <td><img src="https://gitee.com/rucaptcha/" width="140" heigth alt=""></td>
+
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <th>邮箱验证</th>
+            <td>
+                <table>
+                    <tr>
+                        <td><input type="text" name="yanzhengma" value="" placeholder="请输入邮箱验证码"/></td>
+                        <td>
+                            <button type="button">获取验证码</button>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <th>姓名</th>
+            <td><input type="text" name="username" value=""/></td>
+        </tr>
+        <tr>
+            <th>个性域名</th>
+            <td>
+                <table>
+                    <tr>
+                        <td><input type="text" name="" value="http://gitee.com/"/></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <th>密码</th>
+            <td><input type="password" name="password" placeholder="密码不小于6位" id="" value=""/></td>
+        </tr>
+        <tr></tr>
+    </table>
+    <input type="" checkbox name="" value=""/><br>
+    <input type="submit" value="注册"/>
+</form>
+</body>
 </html>
